--- a/Task1.1.ipynb
+++ b/Task1.1.ipynb
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "def createfolder(name) :\n",
-    "    newpath = '/home/amr/Desktop/Vision/FaceID/Task1/'+name \n",
+    "    newpath = 'Your Directory Path'+name \n",
     "    if not os.path.exists(newpath):\n",
     "        os.makedirs(newpath)"
    ]
