--- a/Task1.1.ipynb
+++ b/Task1.1.ipynb
@@ -113,7 +113,7 @@
     "            break\n",
     "        elif k%256 == 32: #Space\n",
     "            img_name = \"opencv_frame_{}.png\".format(img_counter)\n",
-    "            path = '/home/amr/Desktop/Vision/FaceID/Task1/'+str(num)\n",
+    "            path = 'Your Directory Path'+str(num)\n",
     "            #cv2.imwrite(img_name, frame)\n",
     "            createfolder(str(num))\n",
     "            cv2.imwrite(os.path.join(path , img_name), frame)\n",
